View all sequences does not take into account region overlap #59951

Closed
opened 2018-12-29 13:51:00 +01:00 by ChristopherAnderssarian · 5 comments

System Information
Operating system: Microsoft Windows 7 Ultimate, Version 6.1.7601, Service Pack 1, Build 7601
GPU: ASUS Strix Radeon Vega 64
CPU: Intel(R) Core(TM) i7-5960X
RAM: 32.0 GB
Full System Information: Here

Blender Version

Broken:
Well it's broken in 2.7X but in 2.80 it's broken by default
2.80, 29 December, 01:07:02 -7c438e5366b2-

Worked:
Unknown

Short description of error

In 2.80 Region overlap is now default.
In 2.7X the properties region was semi-transparent showing strips underneath.
2.80 doesn't have any transparency so some strips are hidden.
When pressing Home or View all Sequences the Properties panel's width is not being taken to consideration.

Exact steps for others to reproduce the error

View_All_Sequences.blend

**System Information** Operating system: Microsoft Windows 7 Ultimate, Version 6.1.7601, Service Pack 1, Build 7601 GPU: ASUS Strix Radeon Vega 64 CPU: Intel(R) Core(TM) i7-5960X RAM: 32.0 GB Full System Information: [Here ](https://developer.blender.org/p/Christopher_Anderssarian/) **Blender Version** Broken: Well it's broken in 2.7X but in 2.80 it's broken by default 2.80, 29 December, 01:07:02 -7c438e5366b2- Worked: Unknown **Short description of error** In 2.80 Region overlap is now default. In 2.7X the properties region was semi-transparent showing strips underneath. 2.80 doesn't have any transparency so some strips are hidden. When pressing Home or View all Sequences the Properties panel's width is not being taken to consideration. **Exact steps for others to reproduce the error** [View_All_Sequences.blend](https://archive.blender.org/developer/F6106597/View_All_Sequences.blend)

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Richard Antalik self-assigned this 2018-12-29 17:20:23 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@iss, you can compute the visible part of region with ED_region_visible_rect.

In UI_view2d_smooth_view, cur is the rect that to be made visible. It can be offset / scale somehow based on the difference between the full and visible region rect?

@iss, you can compute the visible part of region with `ED_region_visible_rect`. In `UI_view2d_smooth_view`, `cur` is the rect that to be made visible. It can be offset / scale somehow based on the difference between the full and visible region rect?
Brecht Van Lommel changed title from View all Sequences doesn't show all sequences to View all sequences does not take into account region overlap 2019-02-13 17:52:02 +01:00

This issue was referenced by 0207d20cd4

This issue was referenced by 0207d20cd4d400381db3788499bbcc5eb946463a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59951
No description provided.