fix T59951: View all sequences does not take into account region overlap fix centering preview

Reviewed by: Brecht

Differential revision: https://developer.blender.org/D4388